--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -125,7 +125,7 @@
       ['gist', 'gist.github.com/'],
       ['facebook', 'facebook.com/Google/'],
       ['blogger', ''],
-      ['Pornhub', ''],
+      ['Pornhub', 'cn.pornhub.com/'],
     ]
 
     function showIcons() {
